# clockio.v1

./: .env.example  .gitignore  README.md  docker-compose.yml  manage.py  pyproject.toml
base_templates/global/: base.html  home.html
clockio/: apps.py  asgi.py  models.py  settings.py  urls.py  views.py  wsgi.py
clockio/migrations/: 0001_initial.py  0002_alter_user_id.py
employee/: admin.py  models.py  urls.py  views.py
employee/migrations/: 0001_initial.py  0002_remove_clock_slug.py
employee/static/employee/css/: styles.css
employee/templates/employee/: about.html  contact.html  home.html
employee/templates/employee/pages/: about.html  contact.html  home.html
employee/templates/employee/partials/: footer.html  head.html  header.html
setup/: settings.py  urls.py
static/css/: bootstrap-reboot.css:Zone.Identifier
templates/: index.html
templates/clockio/: base.html  index.html
templates/clockio/partials/: _footer.html
